Bug 1926711 - Account Hub Font Awareness, wrap add-on text and make email address show ellipsis at larger font sizes. r=aleca
**How to Test**
- Use testaccounts@o365.thunderbird.net when creating account hub account
- Click the add-on exchange option and up the font size
- At larger font sizes the add-on notification should wrap and the email should have an ellipsis.

Differential Revision: https://phabricator.services.mozilla.com/D238127

--HG--
extra : moz-landing-system : lando

--- a/mail/themes/shared/mail/accountHubForms.css
+++ b/mail/themes/shared/mail/accountHubForms.css
@@ -655,7 +655,7 @@ div:has(legend) {
     border-radius: 10px;
 
     &.single .selection-grid {
-      grid-template-columns: auto;
+      display: block;
     }
 
     & .config-item-icon {
